<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, GradeTrackerMainActivity!</string>
    <string name="app_name">Grade Tracker</string>
    <string name="AddButton">+</string>
    <string name="Title">Grade Tracker</string>
    <string name="addClass">Add New Class</string>
    <string name="className">Class Name</string>
    <string name="prof_name">Professors Name</string>
    <string name="next">Next -&gt;</string>
    <string name="cancel">Cancel</string>
    <string name="back_button">Back</string>
    <string name="ClassCategoriesTitle">Grading Categories for </string>
    <string name="new_category">Category Name</string>
    <string name="default_percent">20%</string>
    <string name="confirm">Confirm</string>
    <string name="category_label">Category</string>

</resources>