<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/categories_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/categoriesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".90"
            android:singleLine="false"
            android:text="@string/ClassCategoriesTitle"
            android:textSize="25sp" />

        <Button
            android:id="@+id/addCategoryButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/AddButton"
            android:textSize="25sp" />
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_weight="0.98"
        android:clickable="false"
        android:focusable="false"
        android:stackFromBottom="false" >

    </ListView>

    <LinearLayout
        android:id="@+id/border_buttons"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_weight="0.00"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/next_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:text="@string/next"
                android:textSize="20sp" />

            <Button
                android:id="@+id/back_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:text="@string/back_button"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>